// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__attrs__ 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDDOM = __DEPS__.stddom;
	var __STDDOM_CMP_SET_COMPILER = __STDDOM.CMP_SET_COMPILER;
	var __STDDOM_CMP_INIT = __STDDOM.CMP_INIT;
	var __STDDOM_CONTEXT = __STDDOM.CONTEXT;
	var __STDDOM_FRAGMENT = __STDDOM.FRAGMENT;
	var __STDDOM_CMP_CREATE = __STDDOM.CMP_CREATE;
	var __STDDOM_LIFECYCLE = __STDDOM.LIFECYCLE;
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_NEXT_CONTEXT = __STDLIB.NEXT_CONTEXT;
	var __STDLIB_CLONE_OBJECT = __STDLIB.CLONE_OBJECT;
	var __STDLIB_CONTEXT_IS_CHANGED = __STDLIB.CONTEXT_IS_CHANGED;
	__STDDOM_CMP_SET_COMPILER(__COMPILER__);

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var attrs = __SCOPE__.attrs;
		var val = __SCOPE__.val;
		var __blocks__ = __SCOPE__.__blocks__;
		var __this__ = __SCOPE__;

		__STDDOM_CMP_INIT(__blocks__, ["Nested"]);

		var __ctx = __STDDOM_CONTEXT();
		var __nctxChanged__ = true, __nctx__ = __STDLIB_NEXT_CONTEXT(__this__);

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = __STDLIB_CLONE_OBJECT((attrs));
		__CMP_ATTRS["baz"] = (val);
		var __x1 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

			__frag,
			__this__,
			__nctx__,
			"Nested",
			__CMP_ATTRS,
			null,
			null
		);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				attrs = __NEWSCOPE__.attrs;
				val = __NEWSCOPE__.val;
				__blocks__ = __NEWSCOPE__.__blocks__;

				var __next_nctx__ = __STDLIB_NEXT_CONTEXT(__this__, __nctx__);
				__nctxChanged__ = __STDLIB_CONTEXT_IS_CHANGED(__nctx__, __next_nctx__);
				__nctx__ = __next_nctx__;

				var __CMP_ATTRS = __STDLIB_CLONE_OBJECT((attrs));
				__CMP_ATTRS["baz"] = (val);
				__x1.update(__CMP_ATTRS, __nctxChanged__ ? __nctx__ : void 0);
			}
		}
	}
}
`;

exports[`Btn -> Sync 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDDOM = __DEPS__.stddom;
	var __STDDOM_CMP_SET_COMPILER = __STDDOM.CMP_SET_COMPILER;
	var __STDDOM_CMP_INIT = __STDDOM.CMP_INIT;
	var __STDDOM_CONTEXT = __STDDOM.CONTEXT;
	var __STDDOM_FRAGMENT = __STDDOM.FRAGMENT;
	var __STDDOM_CMP_CREATE = __STDDOM.CMP_CREATE;
	var __STDDOM_LIFECYCLE = __STDDOM.LIFECYCLE;
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_NEXT_CONTEXT = __STDLIB.NEXT_CONTEXT;
	var __STDLIB_CONTEXT_IS_CHANGED = __STDLIB.CONTEXT_IS_CHANGED;
	__STDDOM_CMP_SET_COMPILER(__COMPILER__);

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var val = __SCOPE__.val;
		var __blocks__ = __SCOPE__.__blocks__;
		var __this__ = __SCOPE__;

		__STDDOM_CMP_INIT(__blocks__, ["Btn"]);

		var __ctx = __STDDOM_CONTEXT();
		var __nctxChanged__ = true, __nctx__ = __STDLIB_NEXT_CONTEXT(__this__);

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = {};
		__CMP_ATTRS["value"] = (val);
		var __x1 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

			__frag,
			__this__,
			__nctx__,
			"Btn",
			__CMP_ATTRS,
			null,
			null
		);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				val = __NEWSCOPE__.val;
				__blocks__ = __NEWSCOPE__.__blocks__;

				var __next_nctx__ = __STDLIB_NEXT_CONTEXT(__this__, __nctx__);
				__nctxChanged__ = __STDLIB_CONTEXT_IS_CHANGED(__nctx__, __next_nctx__);
				__nctx__ = __next_nctx__;

				var __CMP_ATTRS = {};
				__CMP_ATTRS["value"] = (val);
				__x1.update(__CMP_ATTRS, __nctxChanged__ ? __nctx__ : void 0);
			}
		}
	}
}
`;

exports[`CSS Module 1`] = `
function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var attrs = __SCOPE__.attrs;
		var context = __SCOPE__.context;
		var __this__ = __SCOPE__.__this__;
		var __blocks__ = __SCOPE__.__blocks__;
		var __slots__ = __SCOPE__.__slots__;
		var __classNames__ = __SCOPE__.__classNames__;

		var __CLN = __STDLIB_CSS_MODULE(__classNames__);

		var __ctx = __STDDOM_CONTEXT();
		var __nctx__, __nctxChanged__;
		var __super__ = {
			"children": __SLOT_children
		};
		var __frag = __STDDOM_FRAGMENT();
		var __x1 = __STDDOM_LIVE_NODE(__frag, __ctx, 1, "div");
		__STDDOM_D_PROP(__ctx[1], "className", __CLN("alert " + (attrs.x) + " is-" + (attrs.y) + " " + (__classNames__.hasOwnProperty(":host") ? ":host" : "")))

		var __SLOT_children_used = false;
		function __SLOT_children() {
			__SLOT_children_used = true;
		}
		__STDLIB_SLOT(__this__, __slots__, __super__, "children", __SLOT_children, __x1);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				attrs = __NEWSCOPE__.attrs;
				context = __NEWSCOPE__.context;
				__this__ = __NEWSCOPE__.__this__;
				__blocks__ = __NEWSCOPE__.__blocks__;
				__slots__ = __NEWSCOPE__.__slots__;
				__classNames__ = __NEWSCOPE__.__classNames__;

				__CLN.upd(__classNames__);
				__STDDOM_D_PROP(__ctx[1], "className", __CLN("alert " + (attrs.x) + " is-" + (attrs.y) + " " + (__classNames__.hasOwnProperty(":host") ? ":host" : "")))
			}
		}
	}
`;

exports[`Context 1`] = `
function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var attrs = __SCOPE__.attrs;
		var context = __SCOPE__.context;
		var __this__ = __SCOPE__.__this__;
		var __blocks__ = __SCOPE__.__blocks__;
		var __slots__ = __SCOPE__.__slots__;
		var __classNames__ = __SCOPE__.__classNames__;

		__STDDOM_CMP_INIT(__blocks__, ["Bar"]);

		var __ctx = __STDDOM_CONTEXT();
		var __nctxChanged__ = true, __nctx__ = __STDLIB_NEXT_CONTEXT(__this__);

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = {};

		var __x1 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

			__frag,
			__this__,
			__nctx__,
			"Bar",
			__CMP_ATTRS,
			null,
			null
		);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				attrs = __NEWSCOPE__.attrs;
				context = __NEWSCOPE__.context;
				__this__ = __NEWSCOPE__.__this__;
				__blocks__ = __NEWSCOPE__.__blocks__;
				__slots__ = __NEWSCOPE__.__slots__;
				__classNames__ = __NEWSCOPE__.__classNames__;

				var __next_nctx__ = __STDLIB_NEXT_CONTEXT(__this__, __nctx__);
				__nctxChanged__ = __STDLIB_CONTEXT_IS_CHANGED(__nctx__, __next_nctx__);
				__nctx__ = __next_nctx__;

				__nctxChanged__ && __x1.update(void 0, __nctx__);
			}
		}
	}
`;

exports[`Icon (short) 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDDOM = __DEPS__.stddom;
	var __STDDOM_CMP_INLINE = __STDDOM.CMP_INLINE;
	var __STDDOM_CONTEXT = __STDDOM.CONTEXT;
	var __STDDOM_FRAGMENT = __STDDOM.FRAGMENT;
	var __STDDOM_LIVE_NODE = __STDDOM.LIVE_NODE;
	var __STDDOM_D_PROP = __STDDOM.D_PROP;
	var __STDDOM_CMP_CREATE_INLINE = __STDDOM.CMP_CREATE_INLINE;
	var __STDDOM_LIFECYCLE = __STDDOM.LIFECYCLE;
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_TO_STRING = __STDLIB.TO_STRING;
	var __CMP_INLINE_STORE = {};
	__STDDOM_CMP_INLINE(__CMP_INLINE_STORE, "Icon", function (attrs) {
		var name = attrs.name;
		var __ctx = __STDDOM_CONTEXT();
		var __frag = __STDDOM_FRAGMENT();
		var __x2 = __STDDOM_LIVE_NODE(__frag, __ctx, 2, "i");
		__STDDOM_D_PROP(__ctx[2], "className", "icon-" + __STDLIB_TO_STRING(name))

		return {
			ctx: __ctx,
			frag: __frag,
			update: function (__NATTRS__) {
				attrs = __NATTRS__;
				name = __NATTRS__.name;
				__STDDOM_D_PROP(__ctx[2], "className", "icon-" + __STDLIB_TO_STRING(name))
			}
		};
	});

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var x = __SCOPE__.x;
		var __this__ = __SCOPE__;

		var __ctx = __STDDOM_CONTEXT();
		var __nctx__, __nctxChanged__;

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = {};
		__CMP_ATTRS["name"] = (x);
		var __x1 = __STDDOM_CMP_CREATE_INLINE(__CMP_INLINE_STORE,

			__frag,
			__this__,
			__nctx__,
			"Icon",
			__CMP_ATTRS,
			null,
			null
		);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				x = __NEWSCOPE__.x;

				var __CMP_ATTRS = {};
				__CMP_ATTRS["name"] = (x);
				__x1.update(__CMP_ATTRS,  void 0);
			}
		}
	}
}
`;

exports[`Icon 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDDOM = __DEPS__.stddom;
	var __STDDOM_CMP_INLINE = __STDDOM.CMP_INLINE;
	var __STDDOM_CONTEXT = __STDDOM.CONTEXT;
	var __STDDOM_FRAGMENT = __STDDOM.FRAGMENT;
	var __STDDOM_LIVE_NODE = __STDDOM.LIVE_NODE;
	var __STDDOM_D_PROP = __STDDOM.D_PROP;
	var __STDDOM_CMP_CREATE_INLINE = __STDDOM.CMP_CREATE_INLINE;
	var __STDDOM_LIFECYCLE = __STDDOM.LIFECYCLE;
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_TO_STRING = __STDLIB.TO_STRING;
	var __CMP_INLINE_STORE = {};
	__STDDOM_CMP_INLINE(__CMP_INLINE_STORE, "Icon", function (attrs) {
		var name = attrs.name;
		var __ctx = __STDDOM_CONTEXT();
		var __frag = __STDDOM_FRAGMENT();
		var __x2 = __STDDOM_LIVE_NODE(__frag, __ctx, 2, "i");
		__STDDOM_D_PROP(__ctx[2], "className", "icon-" + __STDLIB_TO_STRING(name))

		return {
			ctx: __ctx,
			frag: __frag,
			update: function (__NATTRS__) {
				attrs = __NATTRS__;
				name = __NATTRS__.name;
				__STDDOM_D_PROP(__ctx[2], "className", "icon-" + __STDLIB_TO_STRING(name))
			}
		};
	});

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var x = __SCOPE__.x;
		var __this__ = __SCOPE__;

		var __ctx = __STDDOM_CONTEXT();
		var __nctx__, __nctxChanged__;

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = {};
		__CMP_ATTRS["name"] = (x);
		var __x1 = __STDDOM_CMP_CREATE_INLINE(__CMP_INLINE_STORE,

			__frag,
			__this__,
			__nctx__,
			"Icon",
			__CMP_ATTRS,
			null,
			null
		);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				x = __NEWSCOPE__.x;

				var __CMP_ATTRS = {};
				__CMP_ATTRS["name"] = (x);
				__x1.update(__CMP_ATTRS,  void 0);
			}
		}
	}
}
`;

exports[`Parent vs slots 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDDOM = __DEPS__.stddom;
	var __STDDOM_CMP_SET_COMPILER = __STDDOM.CMP_SET_COMPILER;
	var __STDDOM_CMP_INIT = __STDDOM.CMP_INIT;
	var __STDDOM_CONTEXT = __STDDOM.CONTEXT;
	var __STDDOM_FRAGMENT = __STDDOM.FRAGMENT;
	var __STDDOM_CMP_CREATE = __STDDOM.CMP_CREATE;
	var __STDDOM_LIFECYCLE = __STDDOM.LIFECYCLE;
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_NEXT_CONTEXT = __STDLIB.NEXT_CONTEXT;
	var __STDLIB_CONTEXT_IS_CHANGED = __STDLIB.CONTEXT_IS_CHANGED;
	__STDDOM_CMP_SET_COMPILER(__COMPILER__);

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var __blocks__ = __SCOPE__.__blocks__;
		var __this__ = __SCOPE__;

		__STDDOM_CMP_INIT(__blocks__, ["Foo","Bar","Qux"]);

		var __ctx = __STDDOM_CONTEXT();
		var __nctxChanged__ = true, __nctx__ = __STDLIB_NEXT_CONTEXT(__this__);

		var __frag = __STDDOM_FRAGMENT();
		var __CMP_ATTRS = {};
		__CMP_ATTRS["d"] = "1";
		var __x1 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

			__frag,
			__this__,
			__nctx__,
			"Foo",
			__CMP_ATTRS,
			null,
			{
			"children": function (__this__, __super__, __frag) {
				var __CMP_ATTRS = {};
				__CMP_ATTRS["d"] = "2";
				var __x2 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

					__frag,
					__this__,
					__nctx__,
					"Bar",
					__CMP_ATTRS,
					null,
					{
					"children": function (__this__, __super__, __frag) {
						var __CMP_ATTRS = {};

						var __x3 = __STDDOM_CMP_CREATE(__ctx, __blocks__,

							__frag,
							__this__,
							__nctx__,
							"Qux",
							__CMP_ATTRS,
							null,
							null
						);
					}
				}
			);
		}
	}
);

return {
	ctx: __ctx,
	frag: __frag,
	container: null,
	mountTo: function (container) {
		this.container = container;
		__frag.mountTo(container);
		__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
		return this;
	},
	update: function (__NEWSCOPE__) {
		__SCOPE__ = __NEWSCOPE__;
		__blocks__ = __NEWSCOPE__.__blocks__;

		var __next_nctx__ = __STDLIB_NEXT_CONTEXT(__this__, __nctx__);
		__nctxChanged__ = __STDLIB_CONTEXT_IS_CHANGED(__nctx__, __next_nctx__);
		__nctx__ = __next_nctx__;

		__nctxChanged__ && __x3.update(void 0, __nctx__);
		__nctxChanged__ && __x2.update(void 0, __nctx__);
		__nctxChanged__ && __x1.update(void 0, __nctx__);
	}
}

}
}
`;

exports[`Pseudo Elements: super 1`] = `
function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var attrs = __SCOPE__.attrs;
		var context = __SCOPE__.context;
		var __this__ = __SCOPE__.__this__;
		var __blocks__ = __SCOPE__.__blocks__;
		var __slots__ = __SCOPE__.__slots__;
		var __classNames__ = __SCOPE__.__classNames__;

		var __ctx = __STDDOM_CONTEXT();
		var __nctx__, __nctxChanged__;
		var __super__ = {
			"children": __SLOT_children
		};
		var __frag = __STDDOM_FRAGMENT();
		var __x1 = __STDDOM_NODE(__frag, "div");

		var __SLOT_children_used = false;
		function __SLOT_children() {
			__SLOT_children_used = true;
			__STDDOM_TEXT(__x1, "Original:");
			__STDDOM_VALUE(__x1, __ctx, 2, attrs.value);
		}
		__STDLIB_SLOT(__this__, __slots__, __super__, "children", __SLOT_children, __x1);

		return {
			ctx: __ctx,
			frag: __frag,
			container: null,
			mountTo: function (container) {
				this.container = container;
				__frag.mountTo(container);
				__STDDOM_LIFECYCLE(__ctx, 'connectedCallback');
				return this;
			},
			update: function (__NEWSCOPE__) {
				__SCOPE__ = __NEWSCOPE__;
				attrs = __NEWSCOPE__.attrs;
				context = __NEWSCOPE__.context;
				__this__ = __NEWSCOPE__.__this__;
				__blocks__ = __NEWSCOPE__.__blocks__;
				__slots__ = __NEWSCOPE__.__slots__;
				__classNames__ = __NEWSCOPE__.__classNames__;

				if (__SLOT_children_used) {
					__STDDOM_UPD_VALUE(__ctx[2], attrs.value);
				}
			}
		}
	}
`;
